--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,3 +9,23 @@ body {
    font-size: 50px;
    color: white;
 }
+
+a {
+    color: aquamarine;
+    font-size: 16px;
+}
+
+h2 {
+    font-weight: 300;
+    font-size: 42px;
+}
+
+#guide {
+    font-size: 21px;
+    color: gray;
+}
+
+#footer {
+    text-align: right;
+    color: gray;
+}
