--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,9 +18,10 @@ a {
 h2 {
     font-weight: 300;
     font-size: 42px;
+    color: white;
 }
 
-#guide {
+h4 {
     font-size: 21px;
     color: gray;
 }
