--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,13 +1,13 @@
 body {
-    background-color: black;
+    background-color: #000;
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-#header {
+.header {
    font-weight: normal;
    font-size: 50px;
-   color: white;
+   color: #fff;
 }
 
 a {
@@ -26,7 +26,8 @@ h4 {
     color: gray;
 }
 
-#footer {
+.footer {
+    font-size: 21px;
     text-align: right;
     color: gray;
 }
